fixes #2915 spreadsheet cell max-width was too short

--- a/app/assets/volume/spreadsheet.styl
+++ b/app/assets/volume/spreadsheet.styl
@@ -58,7 +58,7 @@
     padding 3px
     height 1+f3
     display table-cell
-    max-width 8em
+    max-width 15em
     overflow hidden
     text-overflow ellipsis
 
